--- a/index.html
+++ b/index.html
@@ -70,16 +70,15 @@
             <div class="row">
                 <div class="col-12">
                     <section class="callout jumbotron text-center">
-                        <!-- <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+                        <h1 class="jumbotron-header">Hello</h1>
                         <hr class="block-divider block-divider--orange">
-                        <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
-                            <s class="d-none d-sm-inline">€19.99</s>
-                            <span class="d-inline d-sm-none"><br></span>
-                            <strong><mark>First one is free!</mark></strong></p> -->
-                        <div id="cover-text">
+                        <p class="lead">Full Stack</p>
+                        
+                        <!-- <div id="cover-text">
                             <h2>Hello</h2>
                             <h3>Full Stack developer </h3>
-                        </div>
+                        </div> -->
+
                     </section>
                 </div>
             </div>
