--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -66,85 +68,172 @@
     <main role="main">
 
         <div class="container-fluid callout-container">
-            <div class="opaque-overlay">&nbsp;</div>
+
             <div class="row">
-                <div class="col-12">
-                    <section class="callout jumbotron text-center">
+                <div class="col">
+
+                    <!-- home -->
+                    <section class="callout jumbotron">
                         <h1 class="jumbotron-header">Hello</h1>
                         <hr class="block-divider block-divider--orange">
                         <p class="lead">Full Stack</p>
-                        
-                        <!-- <div id="cover-text">
-                            <h2>Hello</h2>
-                            <h3>Full Stack developer </h3>
-                        </div> -->
-
                     </section>
+                    <!-- End Home -->
                 </div>
             </div>
 
         </div>
 
+        <div class="row justify-content-end mr-0">
+            <div class="col-12 col-md-8 pr-0">
+                <!-- About -->
+                <section id="about">
+                    <div class="inner">
+                        <h2>About</h2>
+                        <hr>
+                        <div class="about-con">
+                            <ul>
+                                <li>Name: Radu-Andrei Cojan</li>
+                                <li>Email: <a href="mailto:cojanradu@yahoo.com">cojanradu@yahoo.com</a></li>
+                                <li>Phone: <phone>0747 5934233</phone>
+                                </li>
+                                <li>Date of birth: 11 August 1978</li>
+                                <li>
+                                    <address>5 Brickle Wood Av. Poringland, Norwich, NR147TS, UK</address>
+                                </li>
+                                <li>Nationality: Romanian</li>
+                            </ul>
+                            <h3>Professional Profile</h3>
+                            <p>I am a recent graduate of Code Institute working with front-end and back-end
+                                frameworks. </p>
+                            <p>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask
+                                frameworks.
+                                Passionate about creating a positive user experience, I enjoy working with and
+                                adapting to
+                                technologies as they develop. </p>
+                            <a href="#" class="button">Download resume as PDF format</a>
+                        </div>
+                    </div>
+                </section>
+                <!-- End About -->
 
-        <!-- About -->
-        <section id="about">
-            <div class="inner">
-                <h2>About</h2>
-                <hr />
-                <h3>About Section</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus
-                    aliquet1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse
-                    id1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    neque a nibh mollis blandit. Quisque varius eros ac purus dignissim.</p>
-            </div>
-        </section>
-        <!-- End About -->
 
-        <!-- Skills -->
-        <section id="skills">
-            <div class="inner">
-                <h2>Skills</h2>
-                <hr />
-                <h3>Skills Section</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus
-                    aliquet1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse
-                    id1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    neque a nibh mollis blandit. Quisque varius eros ac purus dignissim.</p>
-            </div>
-        </section>
-        <!-- End Skills -->
 
-        <!-- Portofolio -->
-        <section id="portofolio">
-            <div class="inner">
-                <h2>Portofolio</h2>
-                <hr />
-                <h3>Portofolio Section</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus
-                    aliquet1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse
-                    id1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    neque a nibh mollis blandit. Quisque varius eros ac purus dignissim.</p>
-            </div>
-        </section>
-        <!-- End Portofolio -->
 
-        <!-- Contact -->
-        <section id="contact">
-            <div class="inner">
-                <h2>Contact</h2>
-                <hr />
-                <h3>Contact Section</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus
-                    aliquet1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse
-                    id1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-                    neque a nibh mollis blandit. Quisque varius eros ac purus dignissim.</p>
+                <!-- Skills -->
+                <section id="skills">
+                    <div class="inner">
+                        <h2>Skills</h2>
+                        <hr />
+                        <h3>Skills Section</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus
+                            aliquet1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
+                            vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum.
+                            Suspendisse
+                            id1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
+                            neque a nibh mollis blandit. Quisque varius eros ac purus dignissim.</p>
+                    </div>
+                </section>
+                <!-- End Skills -->
+
+                <!-- Portofolio -->
+                <section id="portofolio">
+                    <div class="inner">
+                        <h2>Portofolio</h2>
+                        <hr />
+                        <h3>Portofolio Section</h3>
+                        <p>Portofolio text</p>
+
+                        <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselCaptions" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselCaptions" data-slide-to="1" class=""></li>
+                                <li data-target="#carouselCaptions" data-slide-to="2" class=""></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100"
+                                        data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide"
+                                        alt="First slide [800x400]"
+                                        src="assets/img/portofolio/gal_1.png"
+                                        data-holder-rendered="true">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>Love Running</h5>
+                                        <p>HTML / CSS</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100"
+                                        data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide"
+                                        alt="Second slide [800x400]"
+                                        src="assets/img/portofolio/gal_2.png"
+                                        data-holder-rendered="true">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>Whiskey</h5>
+                                        <p>HTML / CSS</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100"
+                                        data-src="holder.js/800x400?auto=yes&amp;bg=555&amp;fg=333&amp;text=Third slide"
+                                        alt="Third slide [800x400]"
+                                        src="assets/img/portofolio/gal_3.png"
+                                        data-holder-rendered="true">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>Resume</h5>
+                                        <p>HTML / CSS</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselCaptions" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselCaptions" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+                <!-- End Portofolio -->
+
+                <!-- Contact -->
+                <section id="contact">
+                    <div class="inner">
+                        <h2>Contact</h2>
+                        <hr />
+
+                        <form>
+                            <div class="form-group">
+                                <label for="yourname">Your name</label>
+                                <input type="text" class="form-control" id="yourname" placeholder="Enter your Name">
+                                
+                            </div>
+                            <div class="form-group">
+                                <label for="emailaddress">Email address</label>
+                                <input type="email" class="form-control" id="emailaddress" aria-describedby="emailHelp"
+                                    placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
+                                    anyone
+                                    else.</small>
+                            </div>
+                            <div class="form-group">
+                                <textarea name="message" id="message" class="form-control"  cols="45" rows="5" placeholder="Your Message..."></textarea>
+                            </div>
+
+                            <button type="submit" class="btn btn-secondary">Submit</button>
+                        </form>
+                    </div>
+                </section>
+                <!-- End Contact -->
+
+
             </div>
-        </section>
-        <!-- End Contact -->
+        </div>
+
+
+
 
         <!-- 
             TEST SIzes
@@ -163,7 +252,7 @@
     </main>
 
 
-    <footer class="container-fluid footer">
+    <!-- <footer class="container-fluid footer">
         <div id="footer-details" class="row">
 
             <div class="col-sm-12">
@@ -209,7 +298,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
 
