--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
                                 <div class="carousel-item active">
                                     <img class="d-block w-100"
                                         data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide"
-                                        alt="First slide [800x400]"
-                                        src="assets/img/portofolio/gal_1.png"
+                                        alt="First slide [800x400]" src="assets/img/portofolio/gal_1.png"
                                         data-holder-rendered="true">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Love Running</h5>
@@ -165,8 +164,7 @@
                                 <div class="carousel-item">
                                     <img class="d-block w-100"
                                         data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide"
-                                        alt="Second slide [800x400]"
-                                        src="assets/img/portofolio/gal_2.png"
+                                        alt="Second slide [800x400]" src="assets/img/portofolio/gal_2.png"
                                         data-holder-rendered="true">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Whiskey</h5>
@@ -176,8 +174,7 @@
                                 <div class="carousel-item">
                                     <img class="d-block w-100"
                                         data-src="holder.js/800x400?auto=yes&amp;bg=555&amp;fg=333&amp;text=Third slide"
-                                        alt="Third slide [800x400]"
-                                        src="assets/img/portofolio/gal_3.png"
+                                        alt="Third slide [800x400]" src="assets/img/portofolio/gal_3.png"
                                         data-holder-rendered="true">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Resume</h5>
@@ -207,19 +204,21 @@
                         <form>
                             <div class="form-group">
                                 <label for="yourname">Your name</label>
-                                <input type="text" class="form-control" id="yourname" placeholder="Enter your Name">
-                                
+                                <input type="text" class="form-control" id="yourname" placeholder="Enter your Name"
+                                    required>
+
                             </div>
                             <div class="form-group">
                                 <label for="emailaddress">Email address</label>
                                 <input type="email" class="form-control" id="emailaddress" aria-describedby="emailHelp"
-                                    placeholder="Enter email">
+                                    placeholder="Enter email" required>
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with
                                     anyone
                                     else.</small>
                             </div>
                             <div class="form-group">
-                                <textarea name="message" id="message" class="form-control"  cols="45" rows="5" placeholder="Your Message..."></textarea>
+                                <textarea name="message" id="message" class="form-control" cols="45" rows="5"
+                                    placeholder="Your Message..." required></textarea>
                             </div>
 
                             <button type="submit" class="btn btn-secondary">Submit</button>
