--- a/index.html
+++ b/index.html
@@ -66,12 +66,25 @@
                         </li>
                     </ul>
                 </div>
+                <div class="social d-none d-md-block">
+                    <a href="https://www.facebook.com" target="_blank" class="facebook">
+                        <i class="fab fa-facebook-f"></i></a>
+                    <a href="https://linkedin.com" target="_blank" class="linkedin">
+                        <i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://plus.google.com" target="_blank" class="github">
+                        <i class="fab fa-github"></i></a>
+                </div>
             </nav>
+
+
+
+
         </div>
     </header>
 
 
     <main role="main">
+        <a href="#top" class="totop-link d-none d-block d-md-none"><i class="fas fa-caret-square-up"></i></a>
         <!-- home -->
         <div class="container-fluid callout-container">
             <div class="wide-fix-center"></div>
@@ -114,6 +127,34 @@
                                 technologies as they develop. </p>
                             <button class="btn btn-outline-success btn-block mt-5">Download resume as PDF
                                 format</button>
+
+
+                            <h3>My Education</h3>
+                            <div class="full-divider"></div>
+                            <div class="education-details">
+                                <div class="row ">
+                                    <div class="col-3 mt-3 icon-block text-center"><i class="fas fa-paint-brush"></i>
+                                    </div>
+                                    <div class="col-9 mt-3">
+                                        <h5>The College of West Anglia</h5>
+                                        <h4>BTEC Level 3 Extended Diploma in Art & Design </h4>
+                                        <span>2014 - 2016</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="full-divider"></div>
+                            <div class="education-details mb-3">
+                                <div class="row ">
+
+                                    <div class="col-3 mt-3 icon-block text-center"><i class="fa fa-laptop"></i></div>
+                                    <div class="col-9 mt-3">
+                                        <h5>Norwich University of Arts</h5>
+                                        <h4>BA (Hons.) Games Art & Design</h4>
+                                        <span>2016 - 2019</span>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </section>
@@ -281,7 +322,7 @@
                                     placeholder="Your Message..." required></textarea>
                             </div>
 
-                            <button type="submit" class="btn btn-outline-success">Submit</button>
+                            <button type="submit" class="btn btn-outline-success mb-5">Submit</button>
                         </form>
                     </div>
                 </section>
@@ -291,73 +332,20 @@
             </div>
         </div>
 
-
-
-
-        <!-- 
-            TEST SIzes
-<br>1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9<br />10<br />
-        <h2>
-            <span class="badge badge-primary d-inline-block d-sm-none">Bootstrap - 0-&gt;576px - XS</span>
-            <span class="badge badge-secondary d-none d-sm-inline-block d-md-none">Bootstrap - 576-&gt;768px - SM</span>
-            <span class="badge badge-success d-none d-md-inline-block d-lg-none">Bootstrap - 768-&gt;992px - MD</span>
-            <span class="badge badge-info d-none d-lg-inline-block d-xl-none">Bootstrap - 992-&gt;1200px - LG</span>
-            <span class="badge badge-warning d-none d-xl-inline-block">Bootstrap - 1200-&gt;full - XL</span>
-        </h2>
-         -->
-
-
-
     </main>
 
 
-    <!-- <footer class="container-fluid footer">
-        <div id="footer-details" class="row">
-
-            <div class="col-sm-12">
-
-                <ul class="list-inline social-links">
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fab fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fab fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fab fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fab fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fab fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fab fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">Youtube</span>
-                        </a>
-                    </li>
-
-                </ul>
-            </div>
+    <footer class="container-fluid footer bg-dark d-md-none">
+        <div class="social text-center">
+            <a href="https://www.facebook.com" target="_blank" class="facebook">
+                <i class="fab fa-facebook-f"></i></a>
+            <a href="https://linkedin.com" target="_blank" class="linkedin">
+                <i class="fab fa-linkedin-in"></i></a>
+            <a href="https://plus.google.com" target="_blank" class="github">
+                <i class="fab fa-github"></i></a>
         </div>
-    </footer> -->
+   
+    </footer>
 
 
 
@@ -378,11 +366,12 @@
             }
         });
 
-        $(window).on('beforeunload', function() {
-    $(window).scrollTop(0);
-});
+        // Testing purpose only
+        //$(window).on('beforeunload', function () {
+        //     $(window).scrollTop(0);
+        // });
 
-        </script>
+    </script>
 
 </body>
 
