fixes and changed images

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                     </picture>
                 </a>
                 <div class="d-none d-md-block" style="flex-basis: 100%; height: 0;"></div>
-
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -71,14 +70,10 @@
                         <i class="fab fa-facebook-f"></i></a>
                     <a href="https://linkedin.com" target="_blank" class="linkedin">
                         <i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://plus.google.com" target="_blank" class="github">
+                    <a href="https://github.com.com" target="_blank" class="github">
                         <i class="fab fa-github"></i></a>
                 </div>
             </nav>
-
-
-
-
         </div>
     </header>
 
@@ -88,16 +83,13 @@
         <!-- home -->
         <div class="container-fluid callout-container">
             <div class="wide-fix-center"></div>
-
             <div class="callout text-center">
                 <h1>Hello</h1>
             </div>
             <div class="lead">I'm Radu Cojan<br>
                 Full Stack Developer</div>
-
         </div>
         <!-- End Home -->
-        <!-- <div class="row justify-content-end mr-0"> -->
         <div class="content-container">
             <div class="col-12 pr-0 pl-0">
                 <!-- About -->
@@ -127,7 +119,6 @@
                                 technologies as they develop. </p>
                             <button class="btn btn-outline-success btn-block mt-5">Download resume as PDF
                                 format</button>
-
 
                             <h3>My Education</h3>
                             <div class="full-divider"></div>
@@ -177,7 +168,6 @@
                                 <span class="rating-star full-star fas"></span>
                                 <span class="rating-star half-star fas"></span>
                             </div>
-
                             <div class="col-12 col-sm-6 col-lg-4 rating-box">
                                 <span class="star-hover">CSS - 4 Stars</span>
                                 <h3 class="skill-title">css</h3>
@@ -187,7 +177,6 @@
                                 <span class="rating-star full-star fas"></span>
                                 <span class="rating-star empty-star"></span>
                             </div>
-
                             <div class="col-12 col-sm-6 col-lg-4 rating-box">
                                 <span class="star-hover">Javascript - 3.5 Stars</span>
                                 <h3 class="skill-title">js</h3>
@@ -197,7 +186,6 @@
                                 <span class="rating-star half-star fas"></span>
                                 <span class="rating-star empty-star"></span>
                             </div>
-
                             <div class="col-12 col-sm-6 col-lg-4 rating-box">
                                 <span class="star-hover">PYTHON - 3 Stars</span>
                                 <h3 class="skill-title">py</h3>
@@ -207,7 +195,6 @@
                                 <span class="rating-star empty-star"></span>
                                 <span class="rating-star empty-star"></span>
                             </div>
-
                             <div class="col-12 col-sm-6 col-lg-4 rating-box">
                                 <span class="star-hover">SQL - 2.5 Stars</span>
                                 <h3 class="skill-title">SQL</h3>
@@ -217,7 +204,6 @@
                                 <span class="rating-star empty-star"></span>
                                 <span class="rating-star empty-star"></span>
                             </div>
-
                             <div class="col-12 col-sm-6 col-lg-4 rating-box">
                                 <span class="star-hover">Django - 2 Stars</span>
                                 <h3 class="skill-title">Django</h3>
@@ -227,12 +213,7 @@
                                 <span class="rating-star empty-star"></span>
                                 <span class="rating-star empty-star"></span>
                             </div>
-
-
                         </div>
-
-
-
                     </div>
                 </section>
                 <!-- End Skills -->
@@ -246,9 +227,9 @@
                         <h3>My latest projects:</h3>
                         <div class="row row-cols-2 row-cols-xl-4">
                             <div class="col mb-4">
-
                                 <div class="card h-100">
-                                    <a class="stretched-link" href="aa0" target="_blank">
+                                    <a class="stretched-link" href="https://cojanradu.github.io/CSS_LoveRunning"
+                                        target="_blank">
                                         <img src="assets/img/portofolio/gal_1.png" alt="LoveRunning Project">
                                     </a>
                                     <div class="card-body">
@@ -259,19 +240,21 @@
                             </div>
                             <div class="col mb-4">
                                 <div class="card h-100">
-                                    <a class="stretched-link" href="aa0" target="_blank">
-                                        <img src="assets/img/portofolio/gal_2.png" alt="LoveRunning Project">
+                                    <a class="stretched-link" href="https://cojanradu.github.io/WhiskeyDrop"
+                                        target="_blank">
+                                        <img src="assets/img/portofolio/gal_2.png" alt="Whiskey Drops">
                                     </a>
                                     <div class="card-body">
-                                        <h5 class="card-title">Whiskey Store</h5>
+                                        <h5 class="card-title">Whiskey Drops</h5>
                                         <p class="card-text">HTML / CSS / Bootsrap </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col mb-4">
                                 <div class="card h-100">
-                                    <a class="stretched-link" href="aa0" target="_blank">
-                                        <img src="assets/img/portofolio/gal_3.png" alt="LoveRunning Project">
+                                    <a class="stretched-link" href="https://cojanradu.github.io/UCD_Resume"
+                                        target="_blank">
+                                        <img src="assets/img/portofolio/gal_3.png" alt="Personal Resume">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title">Personal Resume</h5>
@@ -281,9 +264,7 @@
                             </div>
                             <div class="col mb-4">
                                 <div class="card h-100">
-
-                                    <img src="assets/img/portofolio/gal_4.png" alt="LoveRunning Project">
-
+                                    <img src="assets/img/portofolio/gal_4.png" alt="Comming Soon">
                                     <div class="card-body">
                                         <h5 class="card-title">Next Project</h5>
                                         <p class="card-text">Watch this space for my next projects!</p>
@@ -291,7 +272,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </section>
                 <!-- End Portofolio -->
@@ -301,39 +281,32 @@
                     <div class="inner">
                         <h2>Contact</h2>
                         <hr />
-
                         <form>
                             <div class="form-group">
                                 <label for="yourname">Your name</label>
                                 <input type="text" class="form-control" id="yourname" placeholder="Enter your Name"
                                     required>
-
                             </div>
                             <div class="form-group">
                                 <label for="emailaddress">Email address</label>
                                 <input type="email" class="form-control" id="emailaddress" aria-describedby="emailHelp"
                                     placeholder="Enter email" required>
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with
-                                    anyone
-                                    else.</small>
+                                    anyone else.</small>
                             </div>
                             <div class="form-group">
                                 <textarea name="message" id="message" class="form-control" cols="45" rows="10"
                                     placeholder="Your Message..." required></textarea>
                             </div>
-
                             <button type="submit" class="btn btn-outline-success mb-5">Submit</button>
                         </form>
                     </div>
                 </section>
                 <!-- End Contact -->
 
-
             </div>
         </div>
-
     </main>
-
 
     <footer class="container-fluid footer bg-dark d-md-none">
         <div class="social text-center">
@@ -341,13 +314,10 @@
                 <i class="fab fa-facebook-f"></i></a>
             <a href="https://linkedin.com" target="_blank" class="linkedin">
                 <i class="fab fa-linkedin-in"></i></a>
-            <a href="https://plus.google.com" target="_blank" class="github">
+            <a href="https://github.com" target="_blank" class="github">
                 <i class="fab fa-github"></i></a>
         </div>
-   
     </footer>
-
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -372,7 +342,6 @@
         // });
 
     </script>
-
 </body>
 
 </html>
